# miro

./: Cargo.toml  DEVELOPMENT.md  FEATURE-FLAGS.md  README.md  build.rs  main.rs
benches/: image.rs
crates/classification/: Cargo.toml
crates/classification/src/: lib.rs
crates/classification/src/random_ferns/: binary.rs  fern.rs  mod.rs
crates/core/src/: lib.rs  never.rs
crates/core/src/error/: kind.rs  mod.rs
crates/detection/: Cargo.toml
crates/detection/src/: lib.rs  sliding_window.rs
crates/detection/src/sliding_window/: mod.rs
crates/error/: Cargo.toml
crates/error/src/: category.rs  concrete.rs  lib.rs  never.rs  result.rs
crates/euclidean/: Cargo.toml
crates/euclidean/src/: lib.rs
crates/euclidean/src/plane/: coordinates.rs  dimensions.rs  region.rs
crates/euclidean/tests/: lib.rs
crates/euclidean/tests/plane/rectangle/: iter.rs  mod.rs
crates/ext/: Cargo.toml
crates/ext/src/motion/: mod.rs
crates/extensions/: Cargo.toml
crates/extensions/src/: parcmp.rs
crates/extensions/src/iter/: mod.rs
crates/extn/: Cargo.toml
crates/extn/src/: classification.rs  lib.rs  motion.rs  tracking.rs
crates/extn/src/classification/: classifier.rs  mod.rs  supervised.rs  unsupervised.rs
crates/extn/src/motion/: mod.rs
crates/extn/src/motion/optic_flow/: flow.rs  mod.rs
crates/extn/src/tracking/: mod.rs  track.rs  tracker.rs
crates/feature/: Cargo.toml
crates/image/: Cargo.toml
crates/image/src/: integral.rs  lib.rs  pyramid.rs
crates/misc/: Cargo.toml
crates/misc/src/: lib.rs  statistics.rs
crates/motion/: Cargo.toml
crates/motion/src/: lib.rs
crates/motion/src/lucas_kanade/: mod.rs
crates/motion/src/lucas_kanade/pyramidal/: mod.rs  util.rs
crates/tracking/: Cargo.toml
crates/tracking/src/: lib.rs  median_flow.rs
experimental/: Cargo.toml
high/: Cargo.toml
high/src/: currentize.rs  lib.rs  piston.rs
high/src/capture/: av.rs  mod.rs
illusions/: Cargo.toml  README.md
illusions/src/: lib.rs  predator.rs
interactive/: README.md  main.rs
interactive/high/: Cargo.toml
interactive/high/src/capture/: mod.rs
interactive/src/: lib.rs
mirage/: Cargo.toml  main-util.rs  main.rs
mirage/current/: Cargo.toml
mirage/current/src/: lib.rs
mirage/high/src/: lib.rs  piston.rs
src/: error.rs  external.rs  lib.rs  logger.rs  median_flow.rs  range.rs  statistics.rs
src/classification/: mod.rs
src/classification/interface/: mod.rs  supervised.rs
src/core/: mod.rs
src/core/classification/: unsupervised.rs
src/core/motion/: mod.rs  optical_flow.rs
src/core/tracking/: mod.rs  track.rs
src/error/: kind.rs  mod.rs
src/image/: integral.rs  mod.rs  pyramid.rs
src/lucas_kanade/: mod.rs
src/lucas_kanade/pyramidal/: mod.rs
src/modules/: mod.rs
src/modules/classification/: mod.rs  random_ferns.rs
src/modules/detection/: mod.rs  sliding_window.rs
src/modules/feature/: mod.rs
src/modules/motion/: mod.rs
src/modules/motion/lucas_kanade/: mod.rs  pyramidal.rs
src/modules/tracking/: median_flow.rs  mod.rs
src/motion/: mod.rs  optic_flow.rs
src/motion/interface/: mod.rs  optic_flow.rs
src/motion/optic_flow/: flow_fn.rs
src/plane/: coordinates.rs  dimensions.rs  mod.rs  point.rs  rectangle.rs  region.rs  size.rs
src/plane/region/: iter.rs  mod.rs
src/tracking/: median_flow.rs  mod.rs
src/utility/: mod.rs  plane_euclidean.rs  statistics.rs
tests/: image.rs  lib.rs
tests/plane/: mod.rs  rectangle.rs
μcrates/core/src/: result.rs
μcrates/core/src/error/: mod.rs
μcrates/euclidean/src/plane/: coordinates.rs  mod.rs  region.rs
μcrates/ext/src/motion/optic_flow/: corresponding_points.rs  points.rs
μcrates/ext/src/tracking/: mod.rs  track_fn.rs
μcrates/linear/: Cargo.toml
μcrates/motion/: Cargo.toml
μcrates/motion/src/lucas_kanade/pyramidal/: util.rs
μcrates/tracking/: Cargo.toml
