[package]
name = "miro-motion"
version = "0.1.0"
authors = ["Jony <jonysy@users.noreply.github.com>"]
license = "MIT/Apache-2.0"

[dependencies]
image = "0.12.1"
imageproc = "0.7.0"
nalgebra = "0.5.1"

[dependencies.miro-core]
path = "../core"
version = "0.1.0"

[dependencies.miro-euclidean]
path = "../euclidean"
version = "0.1.0"

[dependencies.miro-extn]
path = "../extn"
version = "0.1.0"

[dependencies.miro-misc]
path = "../misc"
version = "0.1.0"