[package]
name = "lychee-tracking"
version = "0.1.0"
authors = ["Jony <jonysy@users.noreply.github.com>"]
license = "MIT/Apache-2.0"

[dependencies]
image = "0.12.1"

[dependencies.lychee-core]
path = "../core"
version = "0.1.0"

[dependencies.lychee-euclidean]
path = "../euclidean"
version = "0.1.0"

[dependencies.lychee-extn]
path = "../extn"
version = "0.1.0"

[dependencies.lychee-misc]
path = "../misc"
version = "0.1.0"