[package]
name = "miro-tracking"
version = "0.1.0"
authors = ["Jony <jonysy@users.noreply.github.com>"]
license = "MIT/Apache-2.0"

[dependencies]
image = "0.12.1"

[dependencies.miro-core]
path = "../core"
version = "0.1.0"

[dependencies.miro-euclidean]
path = "../euclidean"
version = "0.1.0"

[dependencies.miro-extn]
path = "../extn"
version = "0.1.0"

[dependencies.miro-misc]
path = "../misc"
version = "0.1.0"